# docs-gen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/docs_gen/: __init__.py  __main__.py  cli.py  log.py
src/docs_gen/commands/: __init__.py  assess.py  audit.py  build_registry.py  codeowners.py  doctor.py  generate_action.py  init.py  lookup.py  scan.py  snapshot.py  state.py  sync.py  template.py  validate_docs.py  validate_plan.py
src/docs_gen/config/: claim-categories.yaml  doc-types.yaml
src/docs_gen/templates/: adr-format.md  doc-templates.md
src/docs_gen/templates/workflows/: docs-health.yml
tests/: conftest.py  test_assess_specs.py  test_audit_and_doctor.py  test_docs_gen.py  test_registry_and_action.py  test_scan_docs.py  test_state.py  test_template.py  test_v03_features.py  test_validate_docs.py  test_validate_plan.py
