[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-gen"
version = "0.1.0"
description = "Generate, validate, and maintain a developer documentation ecosystem for any repository"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "docs-gen contributors" },
]
keywords = ["documentation", "scaffolding", "developer-tools", "monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
docs-gen = "docs_gen.cli:main"

[project.urls]
Homepage = "https://github.com/davidinoa/docs-gen"
Issues = "https://github.com/davidinoa/docs-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
docs_gen = ["config/*.yaml", "templates/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
